# DZ-10.My_Hotel

./: hotel.db  main.py  pyproject.toml
db/: base.py  models.py
templates/: add_room.html  base.html  edit_room.html  index.html  navigation.html  room.html
