[tool.poetry]
name = "my-hotel"
version = "0.1.0"
description = ""
authors = ["rodion228235 <rodionkovalenko201@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
